--- a/www/tile/TileListTest.html
+++ b/www/tile/TileListTest.html
@@ -1,80 +1,169 @@
-<html>
 
-	<title> Tile Test </title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset=utf-8>
+<meta name="viewport" content="width=620">
+<title>iOS shim for HTML5 Drag and drop</title>
+<link rel="stylesheet" href="demo.css">
+<script src="http://timruffles.github.com/ios-html5-drag-drop-shim/demo/demo.js"></script></head>
+<script src="http://timruffles.github.com/ios-html5-drag-drop-shim/demo/ios-drag-drop.js" type="text/javascript" charset="utf-8"></script>
+<body>
+<section id="wrapper">
+    <header>
+      <h1>iOS shim for HTML5 Drag and drop</h1>
+    </header>
 
-	<h1> Tiles </h1>
+<style type="text/css">
+li {
+  list-style: none;
+}
 
-	<style type="text/css">
-		li {
-		  list-style: none;
-		}
+li a {
+  text-decoration: none;
+  color: #000;
+  margin: 10px;
+  width: 150px;
+  border: 3px dashed #999;
+  background: #eee;
+  padding: 10px;
+  display: block;
+}
 
-		li a {
-		  text-decoration: none;
-		  text-align: left;
-		  color: #000;
-		  margin: 10px;
-		  width: 150px;
-		  height: 100px;
-		  border: 3px groove #999;
-		  background: #7FFFD4;
-		  padding: 10px;
-		  display: block;
-		  float: left;
-		}
+*[draggable=true] {
+  -moz-user-select:none;
+  -khtml-user-drag: element;
+  cursor: move;
+}
 
-		*[draggable=true] {
-		  -moz-user-select:none;
-		  -khtml-user-drag: element;
-		  cursor: move;
-		}
+*:-khtml-drag {
+  background-color: rgba(238,238,238, 0.5);
+}
 
-		*:-khtml-drag {
-		  background-color: rgba(238,238,238, 0.5);
-		}
+li a:hover:after {
+  content: ' (drag me)';
+}
 
-		li a:hover:after {
-		  content: ' (drag me)';
-		}
+ul {
+  margin-left: 200px;
+  min-height: 300px;
+}
 
-		ul {
-		  margin-left: 200px;
-		  min-height: 300px;
-		}
+li.over {
+  border-color: #333;
+  background: #ccc;
+}
 
-		li.over {
-		  border-color: #333;
-		  background: #ccc;
-		}
+#bin {
+  background: url(bin.jpg) top right no-repeat;
+  height: 250px;
+  width: 166px;
+  float: left;
+  border: 5px solid #000;
+  position: relative;
+  margin-top: 0;
+}
 
-		#bin {
-		  background: url(bin.jpg) top right no-repeat;
-		  height: 250px;
-		  width: 166px;
-		  float: left;
-		  border: 5px solid #000;
-		  position: relative;
-		  margin-top: 0;
-		}
-		
-		#tileContainer{
-			width: 700px;
-		}
+#bin.over {
+  background: url(bin.jpg) top left no-repeat;
+}
 
-	</style>
+#bin p {
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  width: 166px;
+  font-size: 32px;
+  color: #fff;
+  text-shadow: #000 2px 2px 2px;
+}
+</style>
+<article>
+  <p>Drag the list items over the dustbin, and drop them to have the bin eat the item</p>
+  <div id="bin"></div>
+  <ul>
+    <li><a id="one" href="#">one</a></li>
+    <li><a href="#" id="two">two</a></li>
+    <li><a href="#" id="three">three</a></li>
+    <li><a href="#" id="four">four</a></li>
+    <li><a href="#" id="five">five</a></li>
+  </ul>
+</article>
+  <script>
 
-	<article>
-	  <p>Make this into a row instead of column so we can have a box that constrains it and forces it to wrap around.</p>
-	  <div id="bin"></div>
-	  <div id="tileContainer">
-		  <ul>
-			<li><a id="one" href="#">event one</a></li>
-			<li><a href="#" id="two">event two</a></li>
-			<li><a href="#" id="three">event three</a></li>
-			<li><a href="#" id="four">event four</a></li>
-			<li><a href="#" id="five">event five</a></li>
-		  </ul>
-	  </div>
-	</article>
+  var eat = ['yum!', 'gulp', 'burp!', 'nom'];
+  var yum = document.createElement('p');
+  var msie = /*@cc_on!@*/0;
+  yum.style.opacity = 1;
 
+  var links = document.querySelectorAll('li > a'), el = null;
+  for (var i = 0; i < links.length; i++) {
+    el = links[i];
+  
+    el.setAttribute('draggable', 'true');
+  
+    addEvent(el, 'dragstart', function (e) {
+      e.dataTransfer.effectAllowed = 'copy'; // only dropEffect='copy' will be dropable
+      e.dataTransfer.setData('Text', this.id); // required otherwise doesn't work
+    });
+  }
+
+  var bin = document.querySelector('#bin');
+
+  addEvent(bin, 'dragover', function (e) {
+    if (e.preventDefault) e.preventDefault(); // allows us to drop
+    this.className = 'over';
+    e.dataTransfer.dropEffect = 'copy';
+    return false;
+  });
+
+  // to get IE to work
+  addEvent(bin, 'dragenter', function (e) {
+    this.className = 'over';
+    return false;
+  });
+
+  addEvent(bin, 'dragleave', function () {
+    this.className = '';
+  });
+
+  addEvent(bin, 'drop', function (e) {
+    if (e.stopPropagation) e.stopPropagation(); // stops the browser from redirecting...why???
+
+    var el = document.getElementById(e.dataTransfer.getData('Text'));
+    
+    el.parentNode.removeChild(el);
+
+    // stupid nom text + fade effect
+    bin.className = '';
+    yum.innerHTML = eat[parseInt(Math.random() * eat.length)];
+
+    var y = yum.cloneNode(true);
+    bin.appendChild(y);
+
+    setTimeout(function () {
+      var t = setInterval(function () {
+        if (y.style.opacity <= 0) {
+          if (msie) { // don't bother with the animation
+            y.style.display = 'none';
+          }
+          clearInterval(t); 
+        } else {
+          y.style.opacity -= 0.1;
+        }
+      }, 50);
+    }, 250);
+
+    return false;
+  });
+
+  </script>
+<footer><a id="author" href="http://twitter.com/timruffles">@timruffles made this shim</a>/<a id="built" href="http://twitter.com/rem">original demo by @rem</a>/<a href="#view-source">source</a></footer> 
+</section>
+<a href="https://github.com/timruffles/ios-html5-drag-drop-shim"><img style="position: absolute; top: 0; left: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
+</body>
 </html>
+
+
