some form of swiping

--- a/ios/www/index.html
+++ b/ios/www/index.html
@@ -2,25 +2,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
-
-
-
   <title>Intro to jQuery Mobile</title>
-  <link rel="stylesheet"  href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-  <link rel="stylesheet"  href="http://andymatthews.net/code/jquerymobile/jquery-mobile-custom.css" />
+ <!-- <link rel="stylesheet"  href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" /> -->
+  <link rel="stylesheet"  href="jquery-mobile-custom.css" />
+  <link rel="stylesheet"  href="tile/tile.css" />
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
   <script type="text/javascript" src="jquery-mobile-custom.js"></script>
 </head>
 <body>
 
+
+<div id="tileContainer">
+      <ul>
+      <li><a href="#" id="t1" class="r1">event one</a></li>
+      <li><a href="#" id="t2" class="r1">event two</a></li>
+      <li><a href="#" id="three">event three</a></li>
+      <li><a href="#" id="four">event four</a></li>
+      <li><a href="#" id="five">event five</a></li>
+      <li><a href="#" id="six">event six</a></li>
+      </ul>
+</div>
+
+<!--
  <div data-role="page" id="swipemenu">
   <div data-role="header">
     <h1>jQuery Mobile - Swipe Menu</h1>
   </div>
   <div data-role="content">
-    <ul data-role="listview" data-inset="true" >
+    <ul data-role="c" data-inset="true" >
       <li data-role="list-divider">Swipe Menu</li>
       <li>
         <a href="/code/jquerymobile/page.html">Item One</a><br />
@@ -41,6 +51,7 @@
     </ul>
   </div>
 </div>
+-->
 
 </body>
 </html>
