--- a/ios/www/index.html
+++ b/ios/www/index.html
@@ -13,14 +13,17 @@
 <body>
 
 
-<div id="tileContainer">
+<div class="tileContainer" id="r1">
       <ul>
-      <li><a href="#" id="t1" class="r1">event one</a></li>
-      <li><a href="#" id="t2" class="r1">event two</a></li>
-      <li><a href="#" id="three">event three</a></li>
-      <li><a href="#" id="four">event four</a></li>
-      <li><a href="#" id="five">event five</a></li>
-      <li><a href="#" id="six">event six</a></li>
+      <li><a href="#" id="t1">event one</a></li>
+      <li><a href="#" id="t2">event two</a></li>
+      </ul>
+</div>
+
+<div class="tileContainer" id="r2">
+      <ul>
+      <li><a href="#" id="t3">event one</a></li>
+      <li><a href="#" id="t4">event two</a></li>
       </ul>
 </div>
 
