--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -15,15 +15,25 @@
 
 <div class="tileContainer" id="r1">
       <ul>
-      <li><a href="#" id="t1">event one</a></li>
-      <li><a href="#" id="t2">event two</a></li>
+	   <li><a href="#" id="t0">event one</a></li>
+      <li><a href="#" id="t1">event two</a></li>
+      <li><a href="#" id="t2">event three</a></li>
       </ul>
 </div>
+
+<div class="clear"></div>
 
 <div class="tileContainer" id="r2">
       <ul>
       <li><a href="#" id="t3">event one</a></li>
       <li><a href="#" id="t4">event two</a></li>
+      </ul>
+</div>
+
+<div class="tileContainer" id="r3">
+      <ul>
+      <li><a href="#" id="t5">event one</a></li>
+      <li><a href="#" id="t6">event two</a></li>
       </ul>
 </div>
 
