pulling data into tiles

--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
   <script type="text/javascript" src="jquery-mobile-custom.js"></script>
+  <script type="text/javascript" src="joynmeAPI.js"></script>
 </head>
 <body>
 
