changed indexing to start from 0

--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -16,64 +16,50 @@
 <body>
 
 
+<div class="tileContainer" id="r0">
+      <ul>
+      <li><a href="#" id="t0">one</a></li>
+      <li><a href="#" id="t1">two</a></li>
+      <li><a href="#" id="t2">three</a></li>
+      <li><a href="#" id="t3">four</a></li>
+      <li><a href="#" id="t4">five</a></li>
+      <li><a href="#" id="t5">fix</a></li>
+      <li><a href="#" id="t6">seven</a></li>
+      <li><a href="#" id="t7">8</a></li>
+      </ul>
+</div>
+
+<div class="clear"></div><br>
+
 <div class="tileContainer" id="r1">
       <ul>
-      <li><a href="#" id="t1">one</a></li>
-      <li><a href="#" id="t2">two</a></li>
-      <li><a href="#" id="t3">three</a></li>
-      <li><a href="#" id="t4">four</a></li>
-      <li><a href="#" id="t5">five</a></li>
-      <li><a href="#" id="t6">fix</a></li>
-      <li><a href="#" id="t7">seven</a></li>
-      <li><a href="#" id="t8">8</a></li>
+      <li><a href="#" id="t8">1one</a></li>
+      <li><a href="#" id="t9">1two</a></li>
+      <li><a href="#" id="t10">1three</a></li>
+      <li><a href="#" id="t11">1four</a></li>
+      <li><a href="#" id="t12">1five</a></li>
+      <li><a href="#" id="t13">1fix</a></li>
+      <li><a href="#" id="t14">1seven</a></li>
+      <li><a href="#" id="t15">18</a></li>
       </ul>
 </div>
 
 <div class="clear"></div>
-<!--
+
 <div class="tileContainer" id="r2">
       <ul>
-      <li><a href="#" id="t3">event one</a></li>
-      <li><a href="#" id="t4">event two</a></li>
+      <li><a href="#" id="t16">one</a></li>
+      <li><a href="#" id="t17">two</a></li>
+      <li><a href="#" id="t18">three</a></li>
+      <li><a href="#" id="t19">four</a></li>
+      <li><a href="#" id="t20">five</a></li>
+      <li><a href="#" id="t21">fix</a></li>
+      <li><a href="#" id="t22">seven</a></li>
+      <li><a href="#" id="t23">8</a></li>
       </ul>
 </div>
 
-<div class="tileContainer" id="r3">
-      <ul>
-      <li><a href="#" id="t5">event one</a></li>
-      <li><a href="#" id="t6">event two</a></li>
-      </ul>
-</div>
--->
-
-<!--
- <div data-role="page" id="swipemenu">
-  <div data-role="header">
-    <h1>jQuery Mobile - Swipe Menu</h1>
-  </div>
-  <div data-role="content">
-    <ul data-role="c" data-inset="true" >
-      <li data-role="list-divider">Swipe Menu</li>
-      <li>
-        <a href="/code/jquerymobile/page.html">Item One</a><br />
-        <i>And sub text</i>
-      </li>
-      <li>
-        <a href="/code/jquerymobile/page.html">Item Two</a><br />
-        <i>And sub text</i>
-      </li>
-      <li>
-        <a href="/code/jquerymobile/page.html">Item Three</a><br />
-        <i>And sub text</i>
-      </li>
-      <li>
-        <a href="/code/jquerymobile/page.html">Item Four</a><br />
-        <i>And sub text</i>
-      </li>
-    </ul>
-  </div>
-</div>
--->
+<div class="clear"></div>
 
 </body>
 </html>
