sliding causes wrapping

--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -29,7 +29,7 @@
       </ul>
 </div>
 
-<div class="clear"></div><br>
+<div class="clear"></div>
 
 <div class="tileContainer" id="r1">
       <ul>
@@ -48,14 +48,14 @@
 
 <div class="tileContainer" id="r2">
       <ul>
-      <li><a href="#" id="t16">one</a></li>
-      <li><a href="#" id="t17">two</a></li>
-      <li><a href="#" id="t18">three</a></li>
-      <li><a href="#" id="t19">four</a></li>
-      <li><a href="#" id="t20">five</a></li>
-      <li><a href="#" id="t21">fix</a></li>
-      <li><a href="#" id="t22">seven</a></li>
-      <li><a href="#" id="t23">8</a></li>
+      <li><a href="#" id="t16">2one</a></li>
+      <li><a href="#" id="t17">2two</a></li>
+      <li><a href="#" id="t18">2three</a></li>
+      <li><a href="#" id="t19">2four</a></li>
+      <li><a href="#" id="t20">2five</a></li>
+      <li><a href="#" id="t21">2fix</a></li>
+      <li><a href="#" id="t22">2seven</a></li>
+      <li><a href="#" id="t23">28</a></li>
       </ul>
 </div>
 
