removing scroll from white space

--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 
+<div id="container" ontouchmove="touchMove(event);">
 
 <div class="tileContainer" id="r0">
       <ul>
@@ -60,6 +61,8 @@
 </div>
 
 <div class="clear"></div>
+
+</div>
 
 </body>
 </html>
