styling tile, adding date js stuff

--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -12,6 +12,7 @@
   <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
   <script type="text/javascript" src="jquery-mobile-custom.js"></script>
   <script type="text/javascript" src="joynmeAPI.js"></script>
+  <script type="text/javasctipt" src="date.extensions.js"></script>
 
 </head>
 <body>
