--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -19,13 +19,13 @@
 
 <div class="tileContainer" id="r0">
       <ul>
-      <li class="huge" id="t0"><a href="#">one</a></li>
+      <li class="huge normal" id="t0"><a href="#">one</a></li>
       <li class="hidden" id="t1"><a href="#">two</a> </li>
-      <li id="t2"><a href="#" >three</a> </li>
-      <li id="t3"><a href="#">four</a> </li>
-      <li class="huge" id="t4"><a href="#">five</a></li>
+      <li class="normal" id="t2"><a href="#" >three</a> </li>
+      <li class="normal" id="t3"><a href="#">four</a> </li>
+      <li class="huge normal" id="t4"><a href="#">five</a></li>
       <li class="hidden" id="t5"><a href="#">fix</a></li>
-      <li class="huge" id="t6"><a href="#">seven</a></li>
+      <li class="huge normal" id="t6"><a href="#">seven</a></li>
       <li class="hidden" id="t7"><a href="#">8</a></li>
       </ul>
 </div>
@@ -34,13 +34,13 @@
 
 <div class="tileContainer" id="r1">
       <ul>
-      <li class="huge" id="t8"><a href="#">1one</a></li>
+      <li class="huge normal" id="t8"><a href="#">1one</a></li>
       <li class="hidden" id="t9"><a href="#">1two</a></li>
-      <li id="t10"><a href="#">1three</a></li>
-      <li id="t11"><a href="#">1four</a></li>
-      <li class="huge" id="t12"><a href="#">1five</a></li>
+      <li class="normal" id="t10"><a href="#">1three</a></li>
+      <li class="normal" id="t11"><a href="#">1four</a></li>
+      <li class="huge normal" id="t12"><a href="#">1five</a></li>
       <li class="hidden" id="t13"><a href="#">1fix</a></li>
-      <li class="huge" id="t14"><a href="#">1seven</a></li>
+      <li class="huge normal" id="t14"><a href="#">1seven</a></li>
       <li class="hidden" id="t15"><a href="#">18</a></li>
       </ul>
 </div>
@@ -49,13 +49,13 @@
 
 <div class="tileContainer" id="r2">
       <ul>
-      <li class="huge" id="t16"><a href="#">2one</a></li>
+      <li class="huge normal" id="t16"><a href="#">2one</a></li>
       <li class="hidden" id="t17"><a href="#">2two</a></li>
-      <li id="t18"><a href="#">2three</a></li>
-      <li id="t19"><a href="#">2four</a></li>
-      <li class="huge"id="t20"><a href="#">2five</a></li>
+      <li class="normal" id="t18"><a href="#">2three</a></li>
+      <li class="normal" id="t19"><a href="#">2four</a></li>
+      <li class="huge normal"id="t20"><a href="#">2five</a></li>
       <li class="hidden"id="t21"><a href="#">2fix</a></li>
-      <li class="huge"id="t22"><a href="#">2seven</a></li>
+      <li class="huge normal"id="t22"><a href="#">2seven</a></li>
       <li class="hidden"id="t23"><a href="#">28</a></li>
       </ul>
 </div>
