--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet"  href="tile/tile.css" />
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
-  <script type="text/javasctipt" src="date.extensions.js"></script>
+  <script type="text/javascript" src="date.extensions.js"></script>
   <script type="text/javascript" src="jquery-mobile-custom.js"></script>
   <script type="text/javascript" src="joynmeAPI.js"></script>
 
