--- a/android/JoynMeSwipeTileActivity/assets/www/src/index.html
+++ b/android/JoynMeSwipeTileActivity/assets/www/src/index.html
@@ -28,7 +28,7 @@
       <li class="normal" id="t3"><a href="#">four</a> </li>
       <li class="huge normal" id="t4"><a href="#">five</a></li>
       <li class="hidden" id="t5"><a href="#">fix</a></li>
-      <li class="huge normal" id="t6"><a href="#">seven</a></li>
+      <li class="huge normal" id="t6"><div class='tileText'><h3>Download!</h3><img src="images/joynme.png" width="90%"></div></li>
       <li class="hidden" id="t7"><a href="#">8</a></li>
       </ul>
 </div>
@@ -43,7 +43,7 @@
       <li class="normal" id="t11"><a href="#">1four</a></li>
       <li class="huge normal" id="t12"><a href="#">1five</a></li>
       <li class="hidden" id="t13"><a href="#">1fix</a></li>
-      <li class="huge normal" id="t14"><a href="#">1seven</a></li>
+      <li class="huge normal" id="t14"><div class='tileText'><h3>Download!</h3><img src="images/joynme.png" width="90%"></div></li>
       <li class="hidden" id="t15"><a href="#">18</a></li>
       </ul>
 </div>
@@ -58,7 +58,7 @@
       <li class="normal" id="t19"><a href="#">2four</a></li>
       <li class="huge normal"id="t20"><a href="#">2five</a></li>
       <li class="hidden"id="t21"><a href="#">2fix</a></li>
-      <li class="huge normal"id="t22"><a href="#">2seven</a></li>
+      <li class="huge normal"id="t22"><div class='tileText'><h3>Download!</h3><img src="images/joynme.png" width="90%"></div></li>
       <li class="hidden"id="t23"><a href="#">28</a></li>
       </ul>
 </div>
